lambda/todo-spring-api/k8s/todo-app-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: todo-app
  labels:
    app: todo-app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: todo-app
  template:
    metadata:
      labels:
        app: todo-app
    spec:
      containers:
        - name: todo-app
          image: longdd90jp/aws-esc:todo-api.0.1
          ports:
            - name: http
              containerPort: 8085
---
apiVersion: v1
kind: Service
metadata:
  name: todo-app
  labels:
    app: todo-app
spec:
  ports:
    - name: http
      port: 8085
      targetPort: 8085
  selector:
    app: todo-app
  type: NodePort
